--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </section>
 
       <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn btn-primary meu-botão" type="button">Conectar-se</button>
+        <button class="btn btn-primary meu-botão" type="button"><a href="/pages/auth/login.html" target="_self">Conectar-se</a></button>
       </div>
     </main>
 
